tests/errors/poisoning/cascade-unary.fn
---
Description: Unary on undefined value should not report operator not found
Expected: compile error
---

type Program
{
    fn Main -> i32
    {
        var x = -undefined_val
        return 0
    }
}
